use verify api
